# World-Imaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/doc/: Control.txt
assets/doc/scenes/: garden.txt
lib/glimac/include/glimac/: Controls.hpp  Cube.hpp  Cursor.hpp  File.hpp  FreeFlyCamera.hpp  GameController.hpp  Overlay.hpp  Rbf.hpp  SDLWindowManager.hpp  Scene.hpp  TrackballCamera.hpp  common.hpp  glm.hpp
lib/glimac/src/: Controls.cpp  Cube.cpp  Cursor.cpp  File.cpp  FreeflyCamera.cpp  GameController.cpp  Overlay.cpp  Rbf.cpp  SDLWindowManager.cpp  Scene.cpp  Shader.cpp  TrackballCamera.cpp
shaders/: color.fs.glsl  color.vs.glsl  color2.fs.glsl  colorcube.fs.glsl  colorcursor.fs.glsl  colorred.fs.glsl  directionallight.fs.glsl  multitext3D.fs.glsl  multitext3D.vs.glsl  normal.fs.glsl  normals.fs.glsl  simple.fs.glsl  simple.vs.glsl  text3D.fs.glsl
src/: main.cpp
